--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
         "preview": "vite preview"
     },
     "dependencies": {
+        "@vueuse/core": "^10.1.2",
         "ant-design-vue": "2.2.8",
         "antd-theme-generator": "^1.2.11",
         "vue": "^3.3.2"
@@ -15,5 +16,10 @@
     "devDependencies": {
         "@vitejs/plugin-vue": "^4.2.3",
         "vite": "^4.3.5"
+    },
+    "pnpm": {
+        "patchedDependencies": {
+            "antd-theme-generator@1.2.11": "patches/antd-theme-generator@1.2.11.patch"
+        }
     }
 }
